update ItemsAdder to 2.0.10, add a new plugin OpenVirtualBook, configure some configs

--- a/server/plugins/ItemsAdder/lang/en.yml
+++ b/server/plugins/ItemsAdder/lang/en.yml
@@ -70,3 +70,4 @@ ia-button-loot-fishing: '&f从钓鱼中掉落'
 ia-button-vehicle-fuel-items: '&e燃料物品'
 nbt-rule: '&f   {rule}: &7{value}'
 resourcepack-not-ready: '&6资源包没有加载完毕，请等待一会'
+attribute-when-in-main-hand: '&7在主手时:'
